Fix primary label contrast

--- a/style.user.css
+++ b/style.user.css
@@ -51,7 +51,7 @@ Example: url("http://my-server.local:8080/") */
     }
 
     .label-primary {
-        color: #337ab7;
+        color: #7db6e8;
         background-color: rgba(51, 122, 183, 0.2);
     }
 
